--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,41 @@
 /*  your css code here. If applicable */
+:root{
+	background-color:rgb(135,206,235);
+}
+
+div p:first-child{
+	background-color:black;
+	color:white;
+}
+
+div p:nth-child(2){
+	color:inherit;
+}
+
+div p:last-child{
+	color:red;
+}
+
+ ul {
+      background-color: gray;
+      list-style: none;
+      width: 50%;
+      padding: 10px;
+    }
+
+    ul li {
+      background-color: gray;
+    }
+
+    ul li:nth-child(odd) {
+      background-color: white;
+    }
+
+    ul li:first-child,
+    ul li:last-child {
+      font-size: 22px;
+    }
+
+    ul li:nth-child(3) {
+      background-color: pink;
+    }
